@@ -82,6 +82,19 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|LineFileDocs
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|LuceneTestCase
 import|;
 end_import
@@ -109,6 +122,19 @@ operator|.
 name|store
 operator|.
 name|LockObtainFailedException
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|Analyzer
 import|;
 end_import
 begin_import
@@ -819,6 +845,364 @@ name|close
 argument_list|()
 expr_stmt|;
 comment|// checkindex
+block|}
+DECL|method|testChecksumsOnly
+specifier|public
+name|void
+name|testChecksumsOnly
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|LineFileDocs
+name|lf
+init|=
+operator|new
+name|LineFileDocs
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|Analyzer
+name|analyzer
+init|=
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|IndexWriter
+name|iw
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|newIndexWriterConfig
+argument_list|(
+name|analyzer
+argument_list|)
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|100
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|iw
+operator|.
+name|addDocument
+argument_list|(
+name|lf
+operator|.
+name|nextDoc
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|iw
+operator|.
+name|addDocument
+argument_list|(
+operator|new
+name|Document
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|iw
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|lf
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|ByteArrayOutputStream
+name|bos
+init|=
+operator|new
+name|ByteArrayOutputStream
+argument_list|(
+literal|1024
+argument_list|)
+decl_stmt|;
+name|CheckIndex
+name|checker
+init|=
+operator|new
+name|CheckIndex
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+name|checker
+operator|.
+name|setInfoStream
+argument_list|(
+operator|new
+name|PrintStream
+argument_list|(
+name|bos
+argument_list|,
+literal|false
+argument_list|,
+name|IOUtils
+operator|.
+name|UTF_8
+argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|VERBOSE
+condition|)
+name|checker
+operator|.
+name|setInfoStream
+argument_list|(
+name|System
+operator|.
+name|out
+argument_list|)
+expr_stmt|;
+name|CheckIndex
+operator|.
+name|Status
+name|indexStatus
+init|=
+name|checker
+operator|.
+name|checkIndex
+argument_list|()
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|indexStatus
+operator|.
+name|clean
+argument_list|)
+expr_stmt|;
+name|checker
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|analyzer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|testChecksumsOnlyVerbose
+specifier|public
+name|void
+name|testChecksumsOnlyVerbose
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|LineFileDocs
+name|lf
+init|=
+operator|new
+name|LineFileDocs
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|Analyzer
+name|analyzer
+init|=
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|IndexWriter
+name|iw
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|newIndexWriterConfig
+argument_list|(
+name|analyzer
+argument_list|)
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|100
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|iw
+operator|.
+name|addDocument
+argument_list|(
+name|lf
+operator|.
+name|nextDoc
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|iw
+operator|.
+name|addDocument
+argument_list|(
+operator|new
+name|Document
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|iw
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|lf
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|ByteArrayOutputStream
+name|bos
+init|=
+operator|new
+name|ByteArrayOutputStream
+argument_list|(
+literal|1024
+argument_list|)
+decl_stmt|;
+name|CheckIndex
+name|checker
+init|=
+operator|new
+name|CheckIndex
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+name|checker
+operator|.
+name|setInfoStream
+argument_list|(
+operator|new
+name|PrintStream
+argument_list|(
+name|bos
+argument_list|,
+literal|true
+argument_list|,
+name|IOUtils
+operator|.
+name|UTF_8
+argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|VERBOSE
+condition|)
+name|checker
+operator|.
+name|setInfoStream
+argument_list|(
+name|System
+operator|.
+name|out
+argument_list|)
+expr_stmt|;
+name|CheckIndex
+operator|.
+name|Status
+name|indexStatus
+init|=
+name|checker
+operator|.
+name|checkIndex
+argument_list|()
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|indexStatus
+operator|.
+name|clean
+argument_list|)
+expr_stmt|;
+name|checker
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|analyzer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 block|}
 DECL|method|testObtainsLock
 specifier|public
