@@ -19,6 +19,8 @@ New Features
   for counting ranges that align with the underlying terms as defined by the
   NumberRangePrefixTree (e.g. familiar date units like days).  (David Smiley)
 
+* LUCENE-6341: Add a -fast option to CheckIndex. (Robert Muir)
+
 API Changes
 
 * LUCENE-3312: The API of oal.document was restructured to
